--- a/style.css
+++ b/style.css
@@ -34,11 +34,11 @@ body{
     gap: 30px;
 }
 .header{
-    margin: 12px;
+    margin: 8px;
     margin-bottom: 40px;
 }
 .logo {
-    width: 50px;
+    max-width: 50px;
     font-size: 24px;
     color: #f9faf8;
     /* display: flex;
@@ -59,7 +59,7 @@ body{
     }
 }
 .header, .box-presentation {
-    width: 80%;
+    width: 90%;
     padding: 16px;
     display: flex;
     flex-wrap: wrap;
@@ -198,7 +198,7 @@ body{
     margin-top: -20px;
 }
 .blue-box {
-    width: 70%;
+    width: 80%;
     background-color: #3882f6;
     border-radius: 7px;
     color: white;
@@ -216,7 +216,7 @@ button{
     color: white;
     font-size: large;
     font-weight: bold;
-    border: 2px solid white;
+    border: 1px solid white;
     border-radius: 10px;
     text-align: center;
     transition: all 0.2s ease-in;
@@ -226,12 +226,10 @@ a:hover,
 img:hover {
     scale: 1.05;
 }
-/* a:hover{
-    scale: 1.05;
-} */
 .footer{
     background-color: #1f2937;
     text-align: center;
+    font-size: 12px;
     padding: 1%;
     color: #e5e7eb;
 }
